# fastapi-template

./: pyproject.toml
alembic/: env.py
alembic/versions/: 956c58b56b48_initial_migration.py
app/: auth_utils.py  db.py  main.py  schemas.py  utils.py
app/api/: auth.py
app/email_handler/: __init__.py  decorators.py  email_handler.py  email_types.py  template_registry.py  template_utils.py
app/email_handler/templates/: __init__.py  email_base.py  otp_template.py  password_reset_template.py
app/models/: __init__.py
app/models/auth/: Userotp.py  __init__.py  user.py
